--- a/속인성.md
+++ b/속인성.md
@@ -1,5 +1,6 @@
 # 속인성이란?
-## 속인성(Dependence on Specific Individuals)은 특정 인물의 지식, 기술, 경험 등에 지나치게 의존하는 상태를 말합니다. 특정 인물이 없으면 작업이나 프로젝트가 제대로 진행되지 않거나 문제가 발생할 수 있는 상황을 의미하죠.
+## 속인성(Dependence on Specific Individuals)
+은 특정 인물의 지식, 기술, 경험 등에 지나치게 의존하는 상태를 말합니다. 특정 인물이 없으면 작업이나 프로젝트가 제대로 진행되지 않거나 문제가 발생할 수 있는 상황을 의미하죠.
 
 예를 들어:
 
