--- a/k8s/주요 컴포넌트.md
+++ b/k8s/주요 컴포넌트.md
@@ -19,7 +19,7 @@
 
 ---
 
-## 3) Node 단 ― 실제 작업이 이뤄지는 현장
+## 3) Node ― 실제 작업이 이뤄지는 현장
 - kubelet  
   스케줄러 지시에 따라 파드·컨테이너를 만들고, 프로브·시크릿·컨피그맵 처리를 담당
 - kube-proxy  
